--- a/grc338/website-mobile-first/style.css
+++ b/grc338/website-mobile-first/style.css
@@ -13,7 +13,7 @@ nav ul {
 	padding: 0;
 
 }
-
+/*
 nav ul li {
     display: inline;
     list-style-type: none;
@@ -29,7 +29,7 @@ nav ul li a {
     color: #222222;
     text-decoration: none;
 }
-
+*/
 
 
 
