--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -1,6 +1,6 @@
 /*CSS document*/
 
-@import url(<link rel="stylesheet" href="https://use.typekit.net/bsz7tya.css">)
+@import url(<href="https://use.typekit.net/bsz7tya.css">)
 
 
 
@@ -10,14 +10,25 @@ body {
 
 
 div.container {
-    max-width: 40em;
+    max-width: 80em;
     margin: auto;
     background-color: #DDE5B6;
     padding: 3em;
 }
 
+section {
+	max-width: 40em;
+	margin: 0 auto 3em;
+}
+
 figure {
     margin: 0;
+}
+
+figcaption {
+	background-color: #F8F0E3;
+	padding: 1em;
+	font-size: 0.85em;
 }
 
 header img {
@@ -40,14 +51,12 @@ nav ul {
 nav ul li {
     display: inline;
     font-family: catseye, sans-serif;
-	font-weight: 400;
-	font-style: normal;
     list-style-type: none;
 
 }
 
 nav ul li a {
-        color: #788C40;
+    color: #788C40;
     text-decoration: none;
     font-size: 1.2em;
     margin-right: 0.75em;
@@ -55,21 +64,15 @@ nav ul li a {
 
 p {
 	font-family: baskerville-urw, serif;
-	font-weight: 400;
-	font-style: normal;
 }
 
 h3 {
 	font-family: catseye, sans-serif;
-	font-weight: 700;
-	font-style: normal;
 	font-size: 1.8em;
 }
 
 h2 {
 	font-family: catseye, sans-serif;
-	font-weight: 700;
-	font-style: normal;
 	font-size: 1.6em;
 }
 
@@ -79,8 +82,27 @@ a {
 }
 
 .teaser {
-	background-color: #788C40;
+	background-color: #F8F0E3;
 	padding: 1.5em;
+}
+
+@media screen and (min-width: 60em) {
+	div.container {
+		display: grid;
+		grid-template-columns: 3fr 1fr;
+	}
+
+	header {
+		grid-column: 1/3;
+	}
+
+	main {
+		grid-column: 1/2;
+	}
+
+	aside {
+		grid-column: 2/3;
+	}
 }
 
 
