--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -1,18 +1,17 @@
 /*CSS document*/
-
-@import url(<href="https://use.typekit.net/bsz7tya.css">)
-
-
+ 
 
 body {
 	margin: auto;
+	background-color: #DDE5B6;
+
 }
 
 
 div.container {
     max-width: 80em;
-    margin: auto;
-    background-color: #DDE5B6;
+    margin: 0 auto;
+    background-color: #F8F0E3;
     padding: 3em;
 }
 
@@ -90,6 +89,7 @@ a {
 	div.container {
 		display: grid;
 		grid-template-columns: 3fr 1fr;
+		grid-gap: 0 1em;
 	}
 
 	header {
@@ -98,6 +98,49 @@ a {
 
 	main {
 		grid-column: 1/2;
+		display: grid;
+		grid-template-columns: repeat(3,1fr);
+		grid-gap: 0 1em;
+	}
+
+	section.mainstory {
+		grid-column: 2/4;
+		grid-row: 1/3;
+		display: flex;
+		flex-direction: column;
+	}
+
+	section.mainstory figure{
+		flex: 1 0 18em;
+		display: flex;
+		flex-direction: column;
+	}
+
+	section.mainstory figure div{
+		flex: 1 0 18em;
+		background-image: url(nook.jpeg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+	}
+
+	section.mainstory figure img {
+		height: 100%;
+		opacity: 100%;
+	}
+
+	section.mainstory figure figcaption {
+		flex: 1 0 3em;
+	}
+
+	section.mainstory h3 {
+		flex: 0 0 auto;
+		margin: 0;
+	}
+
+	section.mainstory p {
+		flex: 0 0 auto;
+		margin: 0;
 	}
 
 	aside {
