--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -9,7 +9,13 @@ body {
 
 
 div.container {
-    max-width: 60em;
+    max-width: 80em;
+    margin: 0 auto;
+    background-color: #F8F0E3;
+    padding: 3em;
+}
+div.container2 {
+    max-width: 80em;
     margin: 0 auto;
     background-color: #F8F0E3;
     padding: 3em;
@@ -85,6 +91,51 @@ a {
 	padding: 1.5em;
 }
 
+
+main.gallery figure {
+	margin: 0;
+	width: 100%;
+    position: absolute;
+    left: 100%;
+    opacity: 0;
+    transition: left 1s, opacity 1s;
+}
+
+main.gallery {
+	position: relative;
+	min-height: 20em;
+	overflow: hidden;
+	padding-bottom: calc(56% +3em);
+	padding: 1em;
+}
+
+input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
+input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
+input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
+input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
+input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
+input:nth-of-type(6):checked ~ main figure:nth-of-type(6),
+input:nth-of-type(7):checked ~ main figure:nth-of-type(7),
+input:nth-of-type(8):checked ~ main figure:nth-of-type(8) {
+	left:0;
+	opacity: 1;
+	padding-bottom: 6em;
+}
+
+nav.gallerynav {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+nav.gallerynav label {
+	flex: 1 0 5em;
+}
+
+input {
+	display: none;
+}
+
+
 @media screen and (min-width: 60em) {
 	div.container {
 		display: grid;
@@ -96,7 +147,7 @@ a {
 		grid-column: 1/3;
 	}
 
-	main {
+	main.main {
 		grid-column: 1/2;
 		display: grid;
 		grid-template-columns: repeat(3,1fr);
@@ -130,7 +181,7 @@ a {
 	}
 
 	section.mainstory figure figcaption {
-		flex: 1 0 3em;
+		flex: 1 0 2em;
 	}
 
 	section.mainstory h3 {
