--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -91,6 +91,9 @@ a {
 	padding: 1.5em;
 }
 
+section.gallery {
+	max-width: 60em;
+}
 
 main.gallery figure {
 	margin: 0;
@@ -103,10 +106,8 @@ main.gallery figure {
 
 main.gallery {
 	position: relative;
-	min-height: 20em;
 	overflow: hidden;
-	padding-bottom: calc(56% +3em);
-	padding: 1em;
+	padding-bottom: calc(62.5% + 3em);
 }
 
 input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
@@ -128,7 +129,7 @@ nav.gallerynav {
 }
 
 nav.gallerynav label {
-	flex: 1 0 5em;
+	flex: 1 0 2em;
 }
 
 input {
@@ -177,7 +178,7 @@ input {
 
 	section.mainstory figure img {
 		height: 100%;
-		opacity: 100%;
+		opacity: 0%;
 	}
 
 	section.mainstory figure figcaption {
