--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -132,9 +132,28 @@ nav.gallerynav label {
 	flex: 1 0 2em;
 }
 
-input {
+input.gallery {
 	display: none;
 }
+
+
+section.personal-info ul li {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1em;
+}
+
+section.personal-info ul li input,
+section.personal-info ul li select {
+	flex: 1 0 20em;
+	box-sizing: border-box;
+}
+
+section.personal-info ul li label {
+	flex: 0 0 10em;
+}
+
+
 
 
 @media screen and (min-width: 60em) {
@@ -197,6 +216,10 @@ input {
 
 	aside {
 		grid-column: 2/3;
+	}
+
+	footer {
+		grid-column: 1/3;
 	}
 }
 
